--- a/config_lab.json
+++ b/config_lab.json
@@ -7,5 +7,6 @@
     "upper_right": [61, 378],
     "lower_right": [55, 83],
     "lower_left": [582, 85],
-    "guide_displacement": [0, 0]
+    "left_guide_displacement": [20, -15],
+    "right_guide_displacement": [20, 15]
 }
