--- a/config_macbook.json
+++ b/config_macbook.json
@@ -1,11 +1,12 @@
 {
     "video_channel": 0,
     "manual_mode": 1,
-    "output_width": 1280,
-    "output_height": 720,
-    "upper_left": [499, 123],
-    "upper_right": [1518, 378],
-    "lower_right": [1668, 924],
-    "lower_left": [388, 809],
-    "guide_displacement": [0, 0]
+    "output_width": 960,
+    "output_height": 540,
+    "upper_left": [436, 53],
+    "upper_right": [1563, 378],
+    "lower_right": [1734, 990],
+    "lower_left": [201, 807],
+    "left_guide_displacement": [20, -15],
+    "right_guide_displacement": [20, 15]
 }
