--- a/config_lab/config.json
+++ b/config_lab/config.json
@@ -1,6 +1,7 @@
 {
     "video_channel": 4,
     "show_input": 0,
+    "fullscreen": 1,
     "input_width": 1920,
     "input_height": 1080,
     "output_width": 960,
