Working but probles with holes in calib

--- a/config_macbook/config.json
+++ b/config_macbook/config.json
@@ -1,8 +1,9 @@
 {
     "video_channel": 0,
-    "show_input": 1,
-    "fullscreen": 0,
+    "show_input": 0,
+    "fullscreen": 1,
     "use_tg_calibration": 1,
+    "use_homography": 0,
     "input_width": 2022,
     "input_height": 1348,
     "output_width": 960,
