--- a/config_lab/config.json
+++ b/config_lab/config.json
@@ -3,12 +3,13 @@
     "show_input": 0,
     "fullscreen": 1,
     "use_tg_calibration": 1,
+    "use_homography": 0,
     "input_width": 1920,
     "input_height": 1080,
     "output_width": 960,
     "output_height": 540,
-    "upper_left": [327, 230],
-    "upper_right": [1587, 214],
-    "lower_right": [1747, 946],
-    "lower_left": [170, 945]
+    "upper_left": [327, 227],
+    "upper_right": [1587, 211],
+    "lower_right": [1742, 942],
+    "lower_left": [174, 945]
 }
