--- a/config_macbook/config.json
+++ b/config_macbook/config.json
@@ -4,6 +4,8 @@
     "fullscreen": 0,
     "use_tg_calibration": 1,
     "use_homography": 0,
+    "tg_tag_size": 100,
+    "tg_delta": 4,
     "input_width": 2022,
     "input_height": 1348,
     "output_width": 960,
